--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,12 @@ html,
 body {
   font-family: "Inter", sans-serif;
 }
+
+
+.booking-header path {
+  fill: purple !important; 
+}
+
+.default-header path {
+  fill: white !important;
+}
