--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @import 'swiper/css';
 @import 'swiper/css/pagination';
 @import "tailwindcss";
-
+@import 'swiper/css/navigation';
 html,
 body {
   font-family: "Inter", sans-serif;
@@ -16,4 +16,20 @@ body {
 
 .default-header path {
   fill: white !important;
+}
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+
+  object-fit: cover;
 }
